# color-control

./: .gitignore  CMakeLists.txt  README.md  color_changer_middleman.json  color_control_middleman.json  middleman.zig
extension/: manifest.json
extension/background/: main.js
extension/options/: options.html  options.js
src/: main.cpp
